--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,13 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+.angular/
+.angular-cache/
+*.angular
+*.angular-cli.json
+.angular.json
+*.bak
+*.cache
 
 # System files
 .DS_Store
