--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,12 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "src/mockData",
+                "output": "/mockData"
+              }
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
