--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
                 "glob": "**/*",
                 "input": "src/mockData",
                 "output": "/mockData"
-              }
+              },
+              "src/assets",
+              "src/favicon.ico"
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
